migrate to JAVA SE 8